@startuml
skinparam nodesep 70

title <b>桥接模式</b>

abstract class Abstraction {
  + {abstract} operation() :Object
}
note top: 抽象

class RefinedAbstraction {
  + operation() :Object
}
note bottom: 被提炼的抽象

abstract class Implementor {
  + {abstract} operationImpl() :Object
}
note top: 实现

class ConcreteImplementorA {
  + operationImpl() :Object
}

class ConcreteImplementorB {
  + operationImpl() :Object
}

note "具体实现" as cin
ConcreteImplementorA .. cin
ConcreteImplementorB .. cin

Abstraction <|-- RefinedAbstraction

Implementor <|-- ConcreteImplementorA
Implementor <|-- ConcreteImplementorB

Abstraction o-right-> Implementor

@enduml
